--- a/MiCode-Note/res/layout/note_edit.xml
+++ b/MiCode-Note/res/layout/note_edit.xml
@@ -73,7 +73,7 @@
                     android:layout_height="fill_parent"
                     android:orientation="vertical">
 
-                    <net.micode.notes.ui.NoteEditText
+                    <org.wr.notes.ui.NoteEditText
                         android:id="@+id/note_edit_view"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
@@ -81,7 +81,7 @@
                         android:background="@null"
                         android:autoLink="all"
                         android:linksClickable="false"
-                        android:minLines="12"
+                        android:minLines="7"
                         android:textAppearance="@style/TextAppearancePrimaryItem"
                         android:lineSpacingMultiplier="1.2" />
 
