--- a/MiCode-Note/res/layout/note_edit_list_item.xml
+++ b/MiCode-Note/res/layout/note_edit_list_item.xml
@@ -13,7 +13,7 @@
         android:focusable="false"
         android:layout_gravity="top|left" />
 
-    <net.micode.notes.ui.NoteEditText
+    <org.wr.notes.ui.NoteEditText
         android:id="@+id/et_edit_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
