--- a/MiCode-Note/res/layout/note_drawimage.xml
+++ b/MiCode-Note/res/layout/note_drawimage.xml
@@ -8,6 +8,7 @@
     <LinearLayout 
         android:layout_width="fill_parent"
   	  	android:layout_height="400dp"
+  	  	android:layout_gravity="center"
   	  	android:orientation="vertical"
         android:id="@+id/note_drawimage_linear"
         >
