--- a/MiCode-Note/res/layout/note_edit.xml
+++ b/MiCode-Note/res/layout/note_edit.xml
@@ -96,8 +96,8 @@
               	  	<ImageView
               	  	    android:id="@+id/note_image_pic"
               	  	    android:layout_width="wrap_content"
-              	  	    android:layout_height="150dp"
-              	  	    android:layout_alignParentLeft="true"
+              	  	    android:layout_height="180dp"
+              	  	    android:layout_gravity="left"
               	  	    android:layout_marginLeft="40dp" />
 
                 </LinearLayout>
